--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,7 @@
 {
-    "parent_file_folder": "/Users/euan/Desktop/story_reader",
-    "temp_file_folder": "/files/tmp",
-    "output_video_folder": "/files/finished_shorts",
-    "stock_video_footage_folder": "/files/stock_video_footage",
+    "temp_file_folder": "/Users/euan/Desktop/story_reader/files/tmp",
+    "output_video_folder": "/Users/euan/Desktop/story_reader/files/finished_shorts",
+    "stock_video_footage_folder": "/Users/euan/Desktop/story_reader/files/stock_video_916",
     "words_per_line": "5",
     "speed": "1.2",
     "model_size": "medium",
