--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,7 @@
     "temp_file_folder": "/Users/euan/Desktop/story_reader/files/tmp",
     "output_video_folder": "/Users/euan/Desktop/story_reader/files/finished_shorts",
     "stock_video_footage_folder": "/Users/euan/Desktop/story_reader/files/stock_video_916",
+    "stock_video_footage_folder_uncropped": "/Users/euan/Desktop/story_reader/files/stock_video_footage",
     "words_per_line": "5",
     "speed": "1.2",
     "model_size": "medium",
