--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,9 @@
 {
-    "temp_file_folder": "/Users/euan/Desktop/story_reader/files/tmp",
-    "output_video_folder": "/Users/euan/Desktop/story_reader/files/finished_shorts",
-    "stock_video_footage_folder": "/Users/euan/Desktop/story_reader/files/stock_video_916",
-    "stock_video_footage_folder_uncropped": "/Users/euan/Desktop/story_reader/files/stock_video_footage",
-    "words_per_line": "5",
-    "speed": "1.2",
+    "temp_file_folder": "files/tmp",
+    "output_video_folder": "files/finished_shorts",
+    "stock_video_footage_folder": "files/stock_video_916",
+    "words_per_line": 5,
+    "speed": 1.2,
     "model_size": "medium",
-    "clip_length_cutoff": "400"
+    "clip_length_cutoff": 400
 }
